absence mapper and generate reg codes
