# src/main/java/com/finalproject/backend/controllers/AbsenceController.java
@@ -19,35 +19,6 @@ public class AbsenceController {
 
     private final AbsenceService absenceService;
 
-    /* ===================== GET ===================== */
-
-    @GetMapping("/{id}")
-    public Absence getById(@PathVariable Long id) {
-        return absenceService.getById(id);
-    }
-
-    @GetMapping("/student/{studentId}")
-    public List<Absence> getByStudent(@PathVariable Long studentId) {
-        return absenceService.getByStudent(studentId);
-    }
-
-    @GetMapping("/student/{studentId}/course/{classCourseId}")
-    public List<Absence> getByStudentAndCourse(
-            @PathVariable Long studentId,
-            @PathVariable Long classCourseId
-    ) {
-        return absenceService.getByStudentAndClassCourse(studentId, classCourseId);
-    }
-
-    @GetMapping("/course/{classCourseId}")
-    public List<Absence> getByCourse(@PathVariable Long classCourseId) {
-        return absenceService.getByClassCourse(classCourseId);
-    }
-
-    @GetMapping("/classroom/{classroomId}")
-    public List<Absence> getByClassroom(@PathVariable Long classroomId) {
-        return absenceService.getByClassroom(classroomId);
-    }
 
     /* ===================== CREATE ===================== */
 
